--- a/src/app/pages/select-address/select-address.page.html
+++ b/src/app/pages/select-address/select-address.page.html
@@ -26,7 +26,7 @@
             </ion-item-options>
 
             <ion-item (click)="setAddress(address)">
-                <ion-label>
+                <ion-label color="light">
                     <h2 class="title">{{ address.address_type }}</h2>
                     <p class="address-text">
                         {{ address.soc_name }}, {{address.street}}, {{address.city}}, {{address.zipcode}}
