--- a/src/app/pages/grocery-category/grocery-category.page.html
+++ b/src/app/pages/grocery-category/grocery-category.page.html
@@ -2,9 +2,9 @@
 
   <ion-toolbar mode="md">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="home" icon="ios-arrow-back" text=""></ion-back-button>
+      <ion-back-button color="light" defaultHref="home" icon="ios-arrow-back" text=""></ion-back-button>
     </ion-buttons>
-    <ion-title>Category</ion-title>
+    <ion-title color="light">Category</ion-title>
     <!-- <ion-buttons slot="end">
       <ion-button>
         <ion-icon src="../../../assets/icon-image/cart_ic.svg">
