--- a/src/app/pages/grocery-home/grocery-home.page.scss
+++ b/src/app/pages/grocery-home/grocery-home.page.scss
@@ -172,7 +172,8 @@ ion-content {
         top: 10px;
         border-radius: 2px;
         .new_p {
-          font-size: 8px;
+          // font-size: 8px;
+          font-size: 11px;
           color: var(--ion-color-white);
           font-family: "Poppins-Medium";
           margin: 0;
