--- a/src/app/pages/product/product.page.scss
+++ b/src/app/pages/product/product.page.scss
@@ -1,5 +1,8 @@
 ion-header {
+    background: #000;
+
     ion-toolbar {
+        --background: transparent;
         ion-title {
             font-family: "fivo-regular";
             text-transform: uppercase;
@@ -11,6 +14,8 @@ ion-header {
 }
 
 ion-content {
+    --background: #000;
+
     .store_div {
         display: flex;
         flex-wrap: wrap;
@@ -36,12 +41,14 @@ ion-content {
             .name {
                 font-size: 15px;
                 font-family: "fivo-regular";
-                color: var(--ion-color-darkBlue);
+                // color: var(--ion-color-darkBlue);
+                color: var(--ion-color-white);
                 margin: 0;
             }
             .qunty {
                 font-size: 12px;
-                color: var(--border-color);
+                // color: var(--border-color);
+                color: var(--ion-color-light);
                 font-family: "fivo-regular";
                 margin: 4px 0px;
             }
@@ -58,8 +65,10 @@ ion-content {
                 .add_btn {
                     height: 15px;
                     width: 15px;
-                    --background: var(--ion-color-darkBlue);
-                    --background-activated: var(--ion-color-darkBlue);
+                    // --background: var(--ion-color-darkBlue);
+                    --background: var(--ion-color-green);
+                    // --background-activated: var(--ion-color-darkBlue);
+                    --background-activated: var(--ion-color-green);
                     // --border-radius: 2px;
                     ion-icon {
                         height: 9px;
@@ -68,7 +77,8 @@ ion-content {
                 }
                 .qty_p {
                     font-size: 14px;
-                    color: var(--border-color);
+                    // color: var(--border-color);
+                    color: var(--ion-color-light);
                     font-family: "fivo-regular";
                     margin: 0 5px;
                     padding-top: 2px;
@@ -76,7 +86,8 @@ ion-content {
                         margin-left: 5px;
                     }
                     ion-icon {
-                        color: var(--ion-color-yellow);
+                        // color: var(--ion-color-yellow);
+                        color: var(--ion-color-white);
                         margin-right: 3px;
                     }
                 }
