--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -314,7 +314,8 @@ ion-content {
                 width: 100%;
 
                 .trans-btn {
-                    font-size: 8px;
+                    font-size: 11px;
+                    // font-size: 8px;
                     // --color: var(--ion-color-green);
                     --color: var(--ion-color-light);
                     text-transform: capitalize;
