--- a/src/app/pages/store-detail/store-detail.page.scss
+++ b/src/app/pages/store-detail/store-detail.page.scss
@@ -1,4 +1,6 @@
 ion-header {
+    background: #000;
+
     ion-toolbar {
         --background: transparent;
         position: fixed;
@@ -21,6 +23,8 @@ ion-header {
 }
 
 ion-content {
+    --background: #000;
+
     .star {
         position: relative;
         right: 15px;
@@ -29,13 +33,15 @@ ion-content {
     .vote {
         font-size: 10.5px;
         font-family: "Poppins-Regular";
-        color: var(--ion-color-darkgray);
+        // color: var(--ion-color-darkgray);
+        color: var(--ion-color-light);
         margin: 0px;
         span {
             margin-left: 5px;
         }
         ion-icon {
-            color: var(--ion-color-yellow);
+            // color: var(--ion-color-yellow);
+            color: var(--ion-color-light);
             margin-right: 3px;
         }
     }
@@ -84,7 +90,8 @@ ion-content {
     .main_lbl {
         margin-top: 10px;
         font-size: 18px;
-        color: var(--light-black-color);
+        // color: var(--light-black-color);
+        color: var(--ion-color-white);
         font-family: "fivo-regular";
         padding: 0px 16px;
         display: flex;
@@ -126,13 +133,15 @@ ion-content {
             .info_lbl {
                 font-size: 18px;
                 font-family: "fivo-medium";
-                color: var(--light-black-color);
+                // color: var(--light-black-color);
+                color: var(--ion-color-white);
                 margin: 0;
             }
             .discount {
                 font-size: 14px;
                 font-family: "fivo-regular";
-                color: var(--light-black-color);
+                // color: var(--light-black-color);
+                color: var(--ion-color-white);
                 margin: 5px 0px;
             }
         }
@@ -159,12 +168,14 @@ ion-content {
             .name {
                 font-size: 15px;
                 font-family: "fivo-regular";
-                color: var(--ion-color-darkBlue);
+                // color: var(--ion-color-darkBlue);
+                color: var(--ion-color-white);
                 margin: 0;
             }
             .qunty {
                 font-size: 12px;
-                color: var(--border-color);
+                // color: var(--border-color);
+                color: var(--ion-color-white);
                 font-family: "fivo-regular";
                 margin: 4px 0px;
             }
@@ -182,8 +193,10 @@ ion-content {
             .add_btn {
                 height: 15px;
                 width: 15px;
-                --background: var(--ion-color-darkBlue);
-                --background-activated: var(--ion-color-darkBlue);
+                // --background: var(--ion-color-darkBlue);
+                --background: var(--ion-color-green);
+                // --background-activated: var(--ion-color-darkBlue);
+                --background-activated: var(--ion-color-green);
                 // --border-radius: 2px;
                 ion-icon {
                     height: 9px;
@@ -221,7 +234,8 @@ ion-content {
             .name {
                 margin-top: 5px;
                 font-size: 18px;
-                color: var(--light-black-color);
+                // color: var(--light-black-color);
+                color: var(--ion-color-white);
                 font-family: "fivo-regular";
                 margin-bottom: 2px;
             }
