Changes style in view

--- a/src/app/pages/add-address/add-address.page.html
+++ b/src/app/pages/add-address/add-address.page.html
@@ -5,8 +5,8 @@
                 <ion-icon name="close"></ion-icon>
             </ion-button>
         </ion-buttons>
-        <ion-title *ngIf="!isEdit">{{"add_edit_address_page.add_title" | translate}}</ion-title>
-        <ion-title *ngIf="isEdit">{{"add_edit_address_page.edit_title" | translate}}</ion-title>
+        <ion-title color="light" *ngIf="!isEdit">{{"add_edit_address_page.add_title" | translate}}</ion-title>
+        <ion-title color="light" *ngIf="isEdit">{{"add_edit_address_page.edit_title" | translate}}</ion-title>
     </ion-toolbar>
 </ion-header>
 
