--- a/src/app/pages/add-card/add-card.page.html
+++ b/src/app/pages/add-card/add-card.page.html
@@ -6,9 +6,9 @@
             </ion-button>
         </ion-buttons>
         <ion-buttons slot="end">
-            <ion-menu-button></ion-menu-button>
+            <ion-menu-button color="light"></ion-menu-button>
         </ion-buttons>
-        <ion-title class="ion-text-center">{{"add_card_page.title" | translate}}</ion-title>
+        <ion-title color="light" class="ion-text-center">{{"add_card_page.title" | translate}}</ion-title>
     </ion-toolbar>
 </ion-header>
 
