--- a/src/app/pages/grocery-history/grocery-history.page.html
+++ b/src/app/pages/grocery-history/grocery-history.page.html
@@ -4,7 +4,7 @@
         <ion-buttons slot="end">
             <ion-menu-button color="light"></ion-menu-button>
         </ion-buttons>
-        <ion-title color="light">{{"grocery_history.order_history" | translate }}</ion-title>
+        <ion-title>{{"grocery_history.order_history" | translate }}</ion-title>
     </ion-toolbar>
 </ion-header>
 
