--- a/src/app/pages/grocery-order-detail/grocery-order-detail.page.html
+++ b/src/app/pages/grocery-order-detail/grocery-order-detail.page.html
@@ -1,7 +1,7 @@
 <ion-header no-border>
   <ion-toolbar mode="md">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="home" icon="ios-arrow-back" text=""></ion-back-button>
+      <ion-back-button color="light" defaultHref="home" icon="ios-arrow-back" text=""></ion-back-button>
     </ion-buttons>
     <ion-title>{{"grocer_order_detail.order_detail" | translate }}</ion-title>
   </ion-toolbar>
