--- a/src/app/pages/order-detail/order-detail.page.html
+++ b/src/app/pages/order-detail/order-detail.page.html
@@ -1,9 +1,9 @@
 <ion-header no-border>
     <ion-toolbar mode="md">
         <ion-buttons slot="start">
-            <ion-back-button defaultHref="home" icon="ios-arrow-back" text=""></ion-back-button>
+            <ion-back-button color="light" defaultHref="home" icon="ios-arrow-back" text=""></ion-back-button>
         </ion-buttons>
-        <ion-title class="ion-text-uppercase">{{"order_detail_page.title" | translate}}</ion-title>
+        <ion-title color="light" class="ion-text-uppercase">{{"order_detail_page.title" | translate}}</ion-title>
         <ion-buttons slot="end">
             <ion-menu-button> </ion-menu-button>
         </ion-buttons>
