--- a/src/app/pages/payment-method/payment-method.page.html
+++ b/src/app/pages/payment-method/payment-method.page.html
@@ -1,7 +1,7 @@
 <ion-header no-border>
     <ion-toolbar mode="md">
         <ion-buttons slot="start">
-            <ion-back-button defaultHref="home" icon="ios-arrow-back" text=""></ion-back-button>
+            <ion-back-button color="light" defaultHref="home" icon="ios-arrow-back" text=""></ion-back-button>
         </ion-buttons>
         <ion-title class="ion-text-uppercase">{{"pay_method_page.title" | translate}}</ion-title>
         <ion-buttons slot="end">
