--- a/src/app/pages/cancle-order/cancle-order.page.html
+++ b/src/app/pages/cancle-order/cancle-order.page.html
@@ -7,7 +7,7 @@
     <ion-list>
         <ion-radio-group (ionChange)="change()">
             <ion-item *ngFor="let i of cancleDate" lines="none">
-                <ion-label>{{i}}</ion-label>
+                <ion-label color="light">{{i}}</ion-label>
                 <ion-radio slot="start" value="biff" mode="md"></ion-radio>
             </ion-item>
         </ion-radio-group>
