--- a/src/app/pages/notification/notification.page.scss
+++ b/src/app/pages/notification/notification.page.scss
@@ -37,32 +37,38 @@ ion-content {
         .tittle {
           font-size: 16px;
           font-family: "Poppins-SemiBold";
-          color: var(--ion-color-darkBlue);
+          // color: var(--ion-color-darkBlue);
+          color: var(--ion-color-light);
           margin-top: 10px;
           margin-bottom: 0px;
         }
         .discount {
           font-size: 12px;
           font-family: "Poppins-Regular";
-          color: var(--ion-color-gray);
+          // color: var(--ion-color-gray);
+          color: var(--ion-color-light);
           margin-top: 3px;
           margin-bottom: 3px;
         }
         .last_div {
           display: flex;
           justify-content: space-between;
+
           .coopan_div {
             height: 20px;
             border: dashed 1px var(--ion-color-border-red);
             background-color: var(--ion-color-lbl-color);
             padding: 3px 8px;
+
             .coopan {
               font-size: 10px;
               font-family: "WorkSans_Regular";
-              color: var(--ion-color-black);
+              // color: var(--ion-color-black);
+              color: var(--ion-color-light);
               margin: 0px;
             }
           }
+
           .trans-btn {
             font-size: 10px;
             font-family: "Poppins-Medium";
@@ -71,6 +77,7 @@ ion-content {
             height: 30px;
           }
         }
+        
         .trans-btn {
           font-size: 10px;
           font-family: "Poppins-Medium";
