--- a/src/app/pages/order-history/order-history.page.scss
+++ b/src/app/pages/order-history/order-history.page.scss
@@ -20,29 +20,35 @@ ion-content {
         color: var(--ion-color-light);
         align-self: center;
     }
+
     .main_heading {
         font-size: 16px;
         font-family: "WorkSans-Medium";
         // color: var(--ion-color-darkBlue);
         color: var(--ion-color-light);
     }
+
     .card_div {
         border-radius: 5px;
         box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.16);
         padding: 5px 10px 20px 10px;
         margin-bottom: 20px;
+        
         ion-item {
+            --background: transparent;
             padding-top: 10px;
             --padding-start: 0px;
             --inner-padding-end: 0;
             margin-bottom: 10px;
             border-bottom: dashed 1px var(--ion-border-color);
             padding-bottom: 10px;
+
             img {
                 border-radius: 3px;
                 height: 56px;
                 width: 56px;
             }
+
             .status {
                 font-size: 12px;
                 font-family: "Poppins-Medium";
@@ -50,10 +56,12 @@ ion-content {
                 color: var(--ion-color-light);
                 align-self: center;
             }
+
             ion-label {
                 margin-left: 10px;
                 margin-bottom: 0px;
                 margin-top: 2px;
+
                 .name {
                     font-size: 14px;
                     font-family: "Poppins-Medium";
@@ -62,6 +70,7 @@ ion-content {
                     display: flex;
                     justify-content: space-between;
                 }
+
                 .address {
                     font-size: 10px;
                     font-family: "Poppins-Regular";
@@ -72,18 +81,21 @@ ion-content {
                 }
             }
         }
+
         .menu {
             font-size: 12px;
             font-family: "Poppins-Medium";
             // color: var(--ion-color-darkgray);
             color: var(--ion-color-light);
         }
+
         .order {
             // color: var(--ion-color-darkBlue);
             color: var(--ion-color-light);
             font-size: 12px;
             font-family: "Poppins-Medium";
         }
+        
         .order_btn {
             --color: var(--ion-color-red);
             font-size: 12px;
