--- a/src/app/pages/payment-method/payment-method.page.scss
+++ b/src/app/pages/payment-method/payment-method.page.scss
@@ -1,7 +1,22 @@
+ion-header {
+  background: #000;
+
+  ion-toolbar {
+    --background: transparent;
+  }
+
+  ion-title {
+    color: var(--ion-color-light);
+  }
+}
+
 ion-content {
+  --background: #000;
+
   .card_div {
     display: flex;
     margin-top: 40px;
+
     .online {
       height: 100px;
       width: 47%;
@@ -12,6 +27,7 @@ ion-content {
       justify-content: center;
       align-items: center;
     }
+
     .cash {
       height: 100px;
       width: 47%;
@@ -21,6 +37,7 @@ ion-content {
       justify-content: center;
       align-items: center;
     }
+
     .img_div {
       .tittle {
         font-size: 12px;
@@ -35,6 +52,7 @@ ion-content {
         width: 50px;
         margin-bottom: 10px;
       }
+
       .cash_heading {
         color: var(--ion-color-green);
         font-size: 12px;
@@ -42,6 +60,7 @@ ion-content {
         margin: 0px;
         text-align: center;
       }
+
       .pay_img {
         width: 80px;
       }
@@ -49,23 +68,28 @@ ion-content {
   }
 
   ion-item {
+    --background: transparent;
     margin-top: 40px;
     box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.16);
+
     .lbl_visa {
       font-size: 22px;
       font-family: "Poppins-Medium";
       color: var(--ion-color-green);
     }
+
     ion-input {
       font-size: 18px;
       font-family: "Poppins-Medium";
       color: var(--ion-color-green);
     }
+
     ion-icon {
       color: var(--ion-color-green);
       align-self: flex-end;
     }
   }
+
   .paypal_img {
     margin-top: 14px !important;
     height: 17px !important;
