--- a/src/app/pages/timeline/timeline.page.scss
+++ b/src/app/pages/timeline/timeline.page.scss
@@ -1,13 +1,37 @@
+:host {
+  ion-header {
+    background: #000;
+
+    ion-toolbar {
+      --background: transparent;
+
+      ion-title {
+        color: var(--ion-color-light);
+      }
+
+      ion-back-button {
+        color: var(--ion-color-light);
+      }
+    }
+  }
+
+  ion-content {
+    --background: #000;
+  }
+}
+
 ion-slides {
   position: absolute;
   bottom: 0;
   width: 100%;
+
   ion-slide {
     min-height: 125px;
     align-items: inherit !important;
     justify-content: inherit !important;
     padding: 16px;
     background-image: var(--timeline);
+
     img {
       border-radius: 50%;
       border: 3px solid var(--ion-color-white);
@@ -16,8 +40,10 @@ ion-slides {
       width: 60px;
       object-fit: fill;
     }
+
     .items {
       margin: 0px 17px;
+
       h2 {
         font-size: 14px;
         font-family: "Poppins-Medium";
@@ -25,6 +51,7 @@ ion-slides {
         color: var(--ion-color-white);
         text-align: initial;
       }
+
       p {
         font-size: 12px;
         font-family: "Poppins-Medium";
@@ -34,12 +61,14 @@ ion-slides {
         letter-spacing: 1;
         display: flex;
         margin-top: 4px;
+
         .title {
           flex: 1;
           margin-right: 10px;
           flex-grow: 1;
           flex-shrink: 1;
         }
+        
         .orderList {
           display: flex;
           flex-direction: column;
@@ -47,6 +76,7 @@ ion-slides {
         }
       }
     }
+
     .price {
       font-size: 14px;
       font-family: "Poppins-Medium";
@@ -55,6 +85,7 @@ ion-slides {
       text-align: initial;
       align-self: center;
     }
+
     ion-button {
       --box-shadow: none;
       --border-radius: 50px 0px 0px 50px;
@@ -69,9 +100,11 @@ ion-slides {
       font-family: "Poppins-Medium";
       height: 26px;
       width: 150px;
+
       ion-icon {
         margin-right: 8px;
       }
+
       a {
         color: var(--ion-color-white);
         text-decoration: none;
@@ -95,6 +128,7 @@ ion-slides {
   top: 0;
   right: 0;
   width: 122px;
+
   &.next {
     --background: var(--my-red-light);
     top: 38px !important;
@@ -105,8 +139,8 @@ ion-slides {
 .footerBtn {
   --box-shadow: none;
   --border-radius: 50px 0px 0px 50px;
-  --background: var(--ion-color-btn-color);
-  --background-activated: var(--ion-color-btn-color);
+  --background: var(--ion-color-green);
+  --background-activated: var(--ion-color-green);
   bottom: 15px;
   margin: 0;
   margin-top: 17px;
@@ -121,21 +155,27 @@ ion-slides {
 }
 
 ion-footer {
+  background: #000;
   padding: 29px 32px 0px;
+
   .timeline {
     display: flex;
     position: relative;
+
     .lines {
       transition: all 1s ease;
       background: var(--ion-color-green);
       width: 5px;
+
       &.disbale {
         background: var(--light-gray);
       }
+
       &.last {
         opacity: 0;
       }
     }
+
     .dot {
       height: 11px;
       background: var(--ion-color-green);
@@ -148,18 +188,22 @@ ion-footer {
         background: var(--light-gray);
       }
     }
+
     .text {
       font-size: 14px;
       font-family: "Poppins-Medium";
-      color: var(--ion-color-darkBlue);
+      // color: var(--ion-color-darkBlue);
+      color: var(--ion-color-light);
       margin: 0;
       padding-bottom: 28px;
       margin-left: 22px;
     }
+
     .pulsating-circle {
       left: 2px;
       top: 5px;
       transform: translateX(-50%) translateY(-50%);
+
       &:before {
         content: "";
         position: relative;
@@ -173,6 +217,7 @@ ion-footer {
         background-color: var(--ion-color-green);
         animation: pulse-ring 1.25s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
       }
+
       &:after {
         content: "";
         position: absolute;
@@ -184,10 +229,10 @@ ion-footer {
         background-color: var(--white);
         border-radius: 15px;
         box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
-        animation: pulse-dot 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s
-          infinite;
+        animation: pulse-dot 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s infinite;
       }
     }
+
     @keyframes pulse-ring {
       0% {
         transform: scale(0.33);
@@ -197,6 +242,7 @@ ion-footer {
         opacity: 0;
       }
     }
+
     @keyframes pulse-dot {
       0% {
         transform: scale(0.8);
